4-istio-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: istio-system
spec:
  rules:
    - host: grafana.172.17.0.3.nip.io
      http:
        paths:
          - backend:
             serviceName: grafana
             servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
spec:
  rules:
    - host: kiali.172.17.0.3.nip.io
      http:
        paths:
          - backend:
             serviceName: kiali
             servicePort: 20001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger
  namespace: istio-system
spec:
  rules:
    - host: jaeger.172.17.0.3.nip.io
      http:
        paths:
          - backend:
             serviceName: jaeger-query
             servicePort: 16686
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: istio-system
spec:
  rules:
    - host: "*.apps.172.17.0.3.nip.io"
      http:
        paths:
          - backend:
             serviceName: istio-ingressgateway
             servicePort: 80
